deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-eks
  labels:
    app: fastapi-eks
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fastapi-eks
  template:
    metadata:
      labels:
        app: fastapi-eks
    spec:
      nodeSelector:
        kubernetes.io/arch: arm64
      containers:
      - name: fastapi-eks
        image: flaxen/fastapi-eks:v3-arm64
        ports:
        - containerPort: 80
